# yasli

./: .hgignore  .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  ComplexClass.h  Example.cpp  Example.sln  Example.vcproj  ExampleDigest.cpp  ExampleLogicEditor.cpp  ExampleLogicEditor.h  ExampleObjects.cpp  ExampleTable.cpp  ExampleTwoTrees.cpp  LICENSE  LICENSE.txt  Main.cpp  PropertyEdit.cpp  PropertyExample.cpp  PropertyExample.sln  PropertyExample.vcproj  README.adoc  README.md  Test.cpp  Test.sln  Test.vcproj  TestBinaryArchive.cpp  TestData.cpp  TestData.h  TestInPlaceArchive.cpp  TestPropertyArchive.cpp  TestTextArchive.cpp  build_linux.sh  build_windows_all.cmd  main.cpp  wwExample.exe.manifest  wwExample.vcproj  wwExample.vcxproj  wwTest.exe.manifest  wwTest.sln  (+7 more)
QPropertyTree/: CMakeLists.txt  Color.cpp  Color.h  ConstStringList.cpp  ConstStringList.h  Factory.h  IDrawContext.h  IMenu.h  IUIFacade.h  Icon.cpp  Icon.h  IconXPMCache.cpp  IconXPMCache.h  InplaceWidgetComboBox.h  InplaceWidgetNumber.h  InplaceWidgetString.h  MathUtils.h  PropertyDrawContext.cpp  PropertyDrawContext.h  PropertyIArchive.cpp  PropertyIArchive.h  PropertyOArchive.cpp  PropertyOArchive.h  PropertyRow.cpp  PropertyRow.h  PropertyRowBool.cpp  PropertyRowBool.h  PropertyRowButton.cpp  PropertyRowColor.cpp  PropertyRowColor.h  PropertyRowContainer.cpp  PropertyRowContainer.h  PropertyRowField.cpp  PropertyRowField.h  PropertyRowFileOpen.cpp  PropertyRowFileOpen.h  PropertyRowFileSave.cpp  PropertyRowIconXPM.cpp  PropertyRowImpl.h  PropertyRowNumber.cpp  (+35 more)
QPropertyTree-example/: CMakeLists.txt  ExampleControlCharacters.cpp  ExampleCustomRows.cpp  ExamplePolymorphicTree.cpp  ExampleStyle.cpp  ExampleStyle.h  ExampleTable.cpp  ExampleTwoTrees.cpp  ExampleTwoTrees.h  LogicEditor.cpp  LogicEditor.h  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
QPropertyTree/frontend-qt/: InplaceWidgetComboBox.h  InplaceWidgetNumber.h  InplaceWidgetString.h  QDrawContext.cpp  QDrawContext.h  QUIFacade.cpp  QUIFacade.h
XMath/: Android.mk  CMakeLists.txt  Colors.cpp  Colors.h  ComboListColor.cpp  ComboListColor.h  ExceptionStub.cpp  MTSection.h  Macros.h  MinMax.h  Profiler.cpp  Profiler.h  Random.h  Range.cpp  Range.h  RangedWrapper.cpp  RangedWrapper.h  Rectf.cpp  Rectf.h  Recti.cpp  Recti.h  SafeCast.h  SafeMath.h  StaticMap.h  Streams.h  XClock.cpp  XClock.h  XMath.2013.vcxproj  XMath.2013.vcxproj.filters  XMath.cpp  XMath.sln  XMath.vcproj  XMath.vcxproj  XMath.vcxproj.filters  exception.h  fastMath.h  round.h  stdafx.cpp  stdafx.h  xmath.h
XMath/XErrHand/: BSUFunctions.cpp  BugslayerUtil.h  CrashHandler.cpp  DiagAssert.cpp  DiagAssert.h  GetLoadedModules.cpp  IsNT.cpp  NT4ProcessInfo.cpp  SymbolEngine.h  TLHELPProcessInfo.cpp  XERRHAND.CPP
property-tree/: CMakeLists.txt  PopupMenu.cpp  PopupMenu.h  PropertyDialog.cpp  PropertyDialog.h  PropertyEdit.cpp  PropertyEdit.h  PropertyIArchive.cpp  PropertyIArchive.h  PropertyItem.cpp  PropertyItem.h  PropertyItemBasic.cpp  PropertyItemBasic.h  PropertyItemContainer.h  PropertyItemFactory.h  PropertyItemFileSelector.cpp  PropertyItemLibrarySelector.cpp  PropertyOArchive.cpp  PropertyOArchive.h  PropertyTree.cpp  PropertyTree.h  StdAfx.h  property-tree.vcproj  test.sar  test2.sar  wxSerialization.cpp  wxSerialization.h  wxWidgets-mswu.vsprops  wxWidgets-mswud.vsprops
property-tree/res/: property_item_check_false.xpm  property_item_check_true.xpm  property_item_combo_button.xpm  property_item_container_add.xpm  property_item_file_selector_button.xpm  (+4 more)
utils/: Assert.h  CMakeLists.txt  Content.cpp  Content.h  Context.h  Errors.h  Factory.h  Files.cpp  Files.h  Macros.h  Math.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  Parser.cpp  Parser.h  Pointers.h  SafeCast.h  StdAfx.cpp  StdAfx.h  StringList.cpp  StringList.h  StringUtil.cpp  StringUtil.h  Test.cpp  Tokenizer.cpp  Tokenizer.h  sigslot.h
ww/: API.h  Android.mk  Application.cpp  Application.h  Box.cpp  Box.h  Button.cpp  Button.h  CMakeLists.txt  Canvas.cpp  Canvas.h  CheckBox.cpp  CheckBox.h  CheckComboBox.cpp  CheckComboBox.h  ClassMenu.h  Clipboard.cpp  Clipboard.h  Color.cpp  Color.h  ColorChooser.cpp  ColorChooser.h  ColorChooserDialog.cpp  ColorChooserDialog.h  ColorComboBox.h  ColorRamp.cpp  ColorRamp.h  ColorRect.cpp  ColorRect.h  Color_ww.cpp  ComboBox.cpp  ComboBox.h  ConstStringList.cpp  ConstStringList.h  Container.h  Decorators.h  Dialog.cpp  Dialog.h  EditorDialog.cpp  EditorDialog.h  (+151 more)
ww-example/: CMakeLists.txt  Example.cpp  ExampleCustomRows.cpp  ExampleDigest.cpp  ExampleLogicEditor.cpp  ExampleObjects.cpp  ExamplePolymorphicTree.cpp  ExampleTable.cpp  ExampleTwoTrees.cpp  Resource.h  Test.cpp  Test.vcproj  Test.vcxproj  TestData.cpp  TestData.h  TestPropertyArchive.cpp  main.cpp  ww-example.2013.vcxproj  ww-example.exe.manifest  ww-example.vcproj  ww-example.vcxproj  ww-test.2013.vcxproj  ww-test.2013.vcxproj.filters  ww-test.rc  ww-test.vcproj  ww-test.vcxproj  ww-test.vcxproj.filters  wwExample.vcxproj  wwTest.rc
ww/Icons/: check.xpm  (+1 more)
yasli/: API.h  Android.mk  Archive.cpp  Archive.h  Assert.cpp  Assert.h  BinArchive.cpp  BinArchive.h  BinaryIArchive.cpp  BinaryIArchive.h  BinaryNode.h  BinaryOArchive.cpp  BinaryOArchive.h  BitVector.h  BitVectorImpl.h  BlackBox.h  CMakeLists.txt  Callback.h  ClassFactory.cpp  ClassFactory.h  ClassFactoryBase.h  Colors.cpp  Colors.h  Config.h  ConstString.h  Content.cpp  Content.h  Context.h  Decorators.h  Enum.cpp  Enum.h  EnumDescription.cpp  EnumDescription.h  Factory.h  FileSelector.cpp  FileSelector.h  Files.cpp  Files.h  FrozenSignal.h  GasonIArchive.cpp  (+83 more)
yasli-benchmark/: Benchmark.cpp  CMakeLists.txt
yasli-example/: CMakeLists.txt  ComplexClass.h  Example.cpp  Example.sln  Example.vcproj  Test.cpp  Test.vcproj  TestInPlaceArchive.cpp  yasli-example.2013.vcxproj  yasli-example.vcxproj
yasli-test/: CMakeLists.txt  ComplexClass.h  Test.cpp  Test.sln  Test.vcproj  TestBinArchive.cpp  TestGeneral.cpp  TestInPlaceArchive.cpp  TestJSONArchive.cpp  TestTextArchive.cpp  yasli-test.2013.vcxproj  yasli-test.vcxproj
(+124 files in other folders)
