project(wWidgets) 
cmake_minimum_required(VERSION 3.4)

if (UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -Wno-deprecated-declarations -Werror")
endif (UNIX)

if (MSVC)
    option(ENABLE_PRECOMPILED_HEADERS "Enable Precompiled Headers" ON)
    add_definitions(-DUNICODE -D_UNICODE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4996")
endif(MSVC)


set(SOURCES
	../PropertyTree/Color.cpp
	../PropertyTree/Color.h
	../PropertyTree/ConstStringList.cpp
	../PropertyTree/ConstStringList.h
	../PropertyTree/Factory.h
	../PropertyTree/MathUtils.h
	../PropertyTree/PropertyIArchive.cpp
	../PropertyTree/PropertyIArchive.h
	../PropertyTree/PropertyOArchive.cpp
	../PropertyTree/PropertyOArchive.h
	../PropertyTree/PropertyRow.cpp
	../PropertyTree/PropertyRow.h
	../PropertyTree/PropertyRowBool.cpp
	../PropertyTree/PropertyRowBool.h
	../PropertyTree/PropertyRowButton.cpp
	../PropertyTree/PropertyRowColor.cpp
	../PropertyTree/PropertyRowColor.h
	../PropertyTree/PropertyRowContainer.cpp
	../PropertyTree/PropertyRowContainer.h
	../PropertyTree/PropertyRowField.cpp
	../PropertyTree/PropertyRowField.h
	../PropertyTree/PropertyRowHorizontalLine.cpp
	../PropertyTree/PropertyRowIconXPM.cpp
	../PropertyTree/PropertyRowImpl.h
	../PropertyTree/PropertyRowNumber.cpp
	../PropertyTree/PropertyRowNumber.h
	../PropertyTree/PropertyRowNumberField.cpp
	../PropertyTree/PropertyRowNumberField.h
	../PropertyTree/PropertyRowObject.cpp
	../PropertyTree/PropertyRowObject.h
	../PropertyTree/PropertyRowPointer.cpp
	../PropertyTree/PropertyRowPointer.h
	../PropertyTree/PropertyRowString.cpp
	../PropertyTree/PropertyRowString.h
	../PropertyTree/PropertyRowStringListValue.cpp
	../PropertyTree/PropertyRowStringListValue.h
	../PropertyTree/PropertyTree.cpp
	../PropertyTree/PropertyTree.h
	../PropertyTree/PropertyTreeMenuHandler.h
	../PropertyTree/PropertyTreeModel.cpp
	../PropertyTree/PropertyTreeModel.h
	../PropertyTree/PropertyTreeOperator.cpp
	../PropertyTree/PropertyTreeOperator.h
	../PropertyTree/Serialization.h
	../PropertyTree/Unicode.cpp
	../PropertyTree/Unicode.h
	
	_WidgetWindow.cpp
	_WidgetWithWindow.cpp
	Application.cpp
	Box.cpp
	Button.cpp
	Canvas.cpp
	CheckBox.cpp
	CheckComboBox.cpp
	Clipboard.cpp
	Color_ww.cpp
	ColorChooser.cpp
	ColorChooserDialog.cpp
	ColorRamp.cpp
	ColorRect.cpp
	ComboBox.cpp
	Dialog.cpp
	EditorDialog.cpp
	Entry.cpp
	FileDialog.cpp
	Files.cpp
	FileSelector.cpp
	Frame.cpp
	HLine.cpp
	HotkeyButton.cpp
	HotkeyContext.cpp
	HotkeyDialog.cpp
	Icon.cpp
	IdleListener.cpp
	KeyPress.cpp
	Label.cpp
	Main.cpp
	MenuBar.cpp
	PopupMenu.cpp
	ProgressBar.cpp
	PropertyEditor.cpp
	RadioButton.cpp
	RadioButtonBox.cpp
	Rect.cpp
	ScrolledWindow.cpp
	Slider.cpp
	SliderDecorator.cpp
	Splitter.cpp
	StdAfx.cpp
	Tabs.cpp
	Timer.cpp
	Tooltip.cpp
	Unicode_ww.cpp
	Vect2.cpp
	Viewport2D.cpp
	Widget.cpp
	Win32Proxy.cpp
	Window.cpp
	_Enums.h
	_WidgetWindow.h
	_WidgetWithWindow.h
	API.h
	Application.h
	Box.h
	Button.h
	Canvas.h
	CheckBox.h
	CheckComboBox.h
	ClassMenu.h
	Clipboard.h
	Color.h
	ColorChooser.h
	ColorChooserDialog.h
	ColorRamp.h
	ColorRect.h
	ComboBox.h
	Container.h
	Decorators.h
	Dialog.h
	EditorDialog.h
	Entry.h
	ExcludeClipRectVisitor.h
	FileDialog.h
	Files.h
	FileSelector.h
	Frame.h
	gdiplusUtils.h
	HBox.h
	HLine.h
	HotkeyButton.h
	HotkeyContext.h
	HotkeyDialog.h
	HSplitter.h
	Icon.h
	IdleListener.h
	KeyPress.h
	Label.h
	Macros.h
	MenuBar.h
	MouseButton.h
	PopupMenu.h
	ProgressBar.h
	PropertyEditor.h
	PropertyTree.h
	RadioButton.h
	RadioButtonBox.h
	Rect.h
	SafeCast.h
	ScrolledWindow.h
	Serialization.h
	sigslot.h
	Slider.h
	SliderDecorator.h
	Splitter.h
	SplitterImpl.h
	StdAfx.h
	Strings.h
	Tabs.h
	Timer.h
	Tooltip.h
	TreeImpl.h
	Unicode.h
	VBox.h
	Vect2.h
	Viewport2D.h
	VSplitter.h
	WaitCursor.h
	Widget.h
	Win32Proxy.h
	Window.h
	
	Win32/Drawing.cpp
	Win32/MemoryDC.cpp
	Win32/MessageLoop.cpp
	Win32/Window32.cpp
	Win32/CommonControls.h
	Win32/Drawing.h
	Win32/Handle.h
	Win32/MemoryDC.h
	Win32/MessageLoop.h
	Win32/Rectangle.h
	Win32/Types.h
	Win32/Window32.h
	
	PropertyTree/PropertyRowBitVector.cpp
	PropertyTree/PropertyRowColor_ww.cpp
	PropertyTree/PropertyRowDecorators.cpp
	PropertyTree/PropertyRowFileSelector.cpp
	PropertyTree/PropertyRowHotkey.cpp
	PropertyTree/PropertyRowIcon_ww.cpp
	PropertyTree/PropertyTree_ww.cpp
	PropertyTree/TreeImpl.cpp
	PropertyTree/wwDrawContext.cpp
	PropertyTree/wwUIFacade.cpp
	PropertyTree/InplaceWidgetComboBox.h
	PropertyTree/InplaceWidgetNumber.h
	PropertyTree/InplaceWidgetString.h
	PropertyTree/PropertyRowBitVector.h
	PropertyTree/PropertyTree_ww.h
	PropertyTree/TreeImpl.h
	PropertyTree/wwDrawContext.h
	PropertyTree/wwUIFacade.h
	PropertyTree/check.xpm
	PropertyTree/check_tristate.xpm
	
	Icons/check.xpm
	Icons/check_tristate.xpm
	)
include_directories(. .. ../PropertyTree PropertyTree)
add_library(wWidgets ${SOURCES})
source_group("" FILES ${SOURCES})
target_link_libraries(wWidgets yasli)
set_target_properties(wWidgets PROPERTIES DEBUG_POSTFIX "-debug")
